--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -300,6 +300,7 @@
 </script>
 
 <script src="/alerta/dashboard/v2/assets/js/console.js"></script>
+<script src="/alerta/dashboard/v2/assets/js/purl.js"></script>
 
 {% block initialiser %}
 
