right align console buttons

--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -57,7 +57,7 @@
             <button id="status-select-closed" type="button" class="btn" value="closed">Closed <span id="count-closed" class="label">0</span></button>
         </div>
     </div>
-    <div class="span6">
+    <div class="span6" align="right">
         <div class="btn-group filters">
             <select id="limit-select" class="btn alert-filter" name="limit" onchange="updateLimit(this.value)">
                 <option value="0">None</option>
