make about page responsive

--- a/alerta/api/v2/templates/about.html
+++ b/alerta/api/v2/templates/about.html
@@ -47,7 +47,7 @@
     <div class="row show-grid">
         <div class="span12">
             <div class="row show-grid">
-            <table class="table table-bordered table-condensed" id="Heartbeats">
+            <table class="table table-bordered table-condensed" id="heartbeats">
                 <thead>
                 <tr><th>Origin</th><th>Version</th><th>Heartbeat Sent</th><th>Time Since Received</th><th>Latency</th></tr>
                 </thead>
