remove Now from Refresh button

--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -68,7 +68,7 @@
     </div>
     <div class ="span2" align="right">
         <div>
-            <button id="refresh-all" class="console-button btn"><i class="icon-refresh"></i><span class="refresh-button-text"> Refresh Now</span></button>
+            <button id="refresh-all" class="console-button btn"><i class="icon-refresh"></i><span class="refresh-button-text"> Refresh</span></button>
         </div>
     </div>
 </div>
