--- a/alerta/api/v2/templates/about.html
+++ b/alerta/api/v2/templates/about.html
@@ -9,12 +9,6 @@
 
     <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-    <style type="text/css">
-        body {
-            padding-top: 60px;
-            padding-bottom: 40px;
-        }
-    </style>
     <link href="/alerta/dashboard/v2/assets/css/custom.css" rel="stylesheet">
 
 </head>
@@ -78,6 +72,8 @@
     });
 
 </script>
+
+<script src="/alerta/dashboard/v2/assets/bootstrap/js/bootstrap-collapse.js"></script>
 
 </body>
 </html>
