--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -8,6 +8,12 @@
     <script type="text/javascript" language="javascript" src="/alerta/dashboard/v2/assets/DataTables/media/js/jquery.dataTables.min.js"></script>
 
     <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+        body {
+            padding-top: 60px;
+            padding-bottom: 40px;
+        }
+    </style>
     <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="/alerta/dashboard/v2/assets/DataTables/bootstrap/dataTables.bootstrap.css" rel="stylesheet">
     <link href="/alerta/dashboard/v2/assets/css/custom.css" rel="stylesheet">
@@ -49,19 +55,17 @@
             <button id="status-select-closed" type="button" class="btn" value="closed">Closed <span id="count-closed" class="label">0</span></button>
         </div>
     </div>
-    <div class ="span4">
-        <div id="from-date-select" class="btn-group" data-toggle="buttons-radio">
+    <div class ="span6">
+        <span id="from-date-select" class="btn-group" data-toggle="buttons-radio">
             <button type="button" class="btn" name="last" value="300">5m</button>
             <button type="button" class="btn" name="last" value="900">15m</button>
             <button type="button" class="btn" name="last" value="3600">1h</button>
             <button type="button" class="btn" name="last" value="86400">1d</button>
             <button type="button" class="btn active" name="last" value="0">All</button>
-        </div>
-    </div>
-    <div class ="span2" align="right">
-        <div>
-            <button id="refresh-all" class="console-button btn"><i class="icon-refresh"></i><span class="refresh-button-text"> Refresh</span></button>
-        </div>
+        </span>
+        <span>
+            <button id="refresh-all" class="console-button btn" align="right"><i class="icon-refresh"></i><span class="refresh-button-text"> Refresh</span></button>
+        </span>
     </div>
 </div>
 
