--- a/alerta/api/v2/templates/about.html
+++ b/alerta/api/v2/templates/about.html
@@ -8,6 +8,12 @@
     <script type="text/javascript" language="javascript" src="/alerta/dashboard/v2/assets/DataTables/media/js/jquery.js"></script>
 
     <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+        body {
+            padding-top: 60px;
+            padding-bottom: 40px;
+        }
+    </style>
     <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="/alerta/dashboard/v2/assets/css/custom.css" rel="stylesheet">
 
