righ align refresh button

--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -55,7 +55,7 @@
             <button id="status-select-closed" type="button" class="btn" value="closed">Closed <span id="count-closed" class="label">0</span></button>
         </div>
     </div>
-    <div class ="span6">
+    <div class ="span6" align="right">
         <span id="from-date-select" class="btn-group" data-toggle="buttons-radio">
             <button type="button" class="btn" name="last" value="300">5m</button>
             <button type="button" class="btn" name="last" value="900">15m</button>
