--- a/alerta/api/v2/templates/widgets/details.html
+++ b/alerta/api/v2/templates/widgets/details.html
@@ -3,79 +3,70 @@
     <!-- link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css' -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <script type="text/javascript" language="javascript" src="/alerta/dashboard/v2/assets/DataTables/media/js/jquery.js"></script>
     <script type="text/javascript" language="javascript" src="/alerta/dashboard/v2/assets/DataTables/media/js/jquery.dataTables.min.js"></script>
 
     <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <style type="text/css">
         body {
-            padding-top: 10px;
+            padding-top: 60px;
             padding-bottom: 40px;
         }
     </style>
+    <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/alerta/dashboard/v2/assets/DataTables/bootstrap/dataTables.bootstrap.css" rel="stylesheet">
     <link href="/alerta/dashboard/v2/assets/css/custom.css" rel="stylesheet">
-
+    <link href="/alerta/dashboard/v2/assets/DataTables/extras/TableTools/media/css/TableTools.css" rel="stylesheet">
 </head>
 
 <body>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="">Alert Console</a>
+        </div>
+    </div>
+</div>
 
 <div class="container">
-<table width="100%">
-    <tr>
-        <span id="heartbeat-alerts"></span>
-        <div id="console-alert" class="alert alert-info initially-hidden">
-            <button class="close" data-dismiss="alert" onclick="">&times;</button>
-            <strong>Warning!</strong> <span id="warning-text"></span>
-        </div>
-    </tr>
-    <tr>
-        <td>
-            <!-- div  id="status-counts" -->
-            <table border=1 class="table table-bordered table-condensed"  id="status-counts">
-                <tbody>
-                <tr id="alert-status" class="status">
-                    <td><span class="label">Open</span></td>
-                    <td id="count-open"><b>0</b></td>
-                    <td><span class="label">Ack</span></td>
-                    <td id="count-ack"><b>0</b></td>
-                    <td><span class="label">Closed</span></td>
-                    <td id="count-closed"><b>0</b></td>
-                </tr>
-                </tbody>
-            </table>
-            <!-- /div -->
-        </td>
-        <td>
-            <div align="right">
-                <select id="status-select" class="btn" name="status" onchange="updateStatus(this.value)" style="width:150px">
-                    <option value="open">Open</option>
-                    <option value="ack">Ack</option>
-                    <option value="closed">Closed</option>
-                </select>
-                <select id="limit-select" class="btn" name="limit" onchange="updateLimit(this.value)" style="width:150px">
-                    <option value="0">No limit</option>
-                    <option value="10">Only 10</option>
-                    <option value="50">Only 50</option>
-                    <option value="100">Only 100</option>
-                    <option value="500">Only 500</option>
-                </select>
-                <select id="from-date-select" class="btn" name="last" onchange="updateFromDate(this.value)" style="width:150px">
-                    <option value="0">All alerts</option>
-                    <option value="120">Last 2 minutes</option>
-                    <option value="300">Last 5 minutes</option>
-                    <option value="600">Last 10 minutes</option>
-                    <option value="1800">Last 30 minutes</option>
-                    <option value="3600">Last 1 hour</option>
-                </select>
-                <button id="refresh-all" class="console-button btn"><i class="icon-refresh"></i> Refresh Now</button>
-            </div>
-        </td>
-    </tr>
-</table>
 
+<div class="row-fluid">
+    <div class ="span6">
+        <div id="status-select" class="btn-group" data-toggle="buttons-checkbox">
+            <button id="status-select-open" type="button" class="btn active" value="open">Open <span id="count-open" class="label">0</span></button>
+            <button id="status-select-ack" type="button" class="btn" value="ack">Ack <span id="count-ack" class="label">0</span></button>
+            <button id="status-select-closed" type="button" class="btn" value="closed">Closed <span id="count-closed" class="label">0</span></button>
+        </div>
+    </div>
+    <div class ="span6" align="right">
+        <span id="from-date-select" class="btn-group" data-toggle="buttons-radio">
+            <button type="button" class="btn" name="last" value="300">5m</button>
+            <button type="button" class="btn" name="last" value="900">15m</button>
+            <button type="button" class="btn" name="last" value="3600">1h</button>
+            <button type="button" class="btn" name="last" value="86400">1d</button>
+            <button type="button" class="btn active" name="last" value="0">All</button>
+        </span>
+        <span>
+            <button id="refresh-all" class="console-button btn" align="right"><i class="icon-refresh"></i><span class="refresh-button-text"> Refresh</span></button>
+        </span>
+    </div>
+</div>
+
+    <table width="100%">
+        <tr>
+            <span id="heartbeat-alerts"></span>
+            <div id="console-alert" class="alert alert-info initially-hidden">
+                <a class="close" data-dismiss="alert" href="#">&times;</a>
+                <strong>Warning!</strong> <span id="warning-text"></span>
+            </div>
+        </tr>
+    </table>
 
 <!-- Alert Details -->
 <div class="row show-grid">
@@ -130,9 +121,12 @@
 </script>
 
 <script src="/alerta/dashboard/v2/assets/js/console.js"></script>
+<script src="/alerta/dashboard/v2/assets/js/purl.js"></script>
 
 <script>
     $(document).ready(function() {
+
+        heartbeatAlerts();
 
         var filter = '{{ query|safe }}';
         var asiFilters = { };
@@ -142,6 +136,11 @@
         updateAlertsTable(filter, asiFilters);
     });
 </script>
+
+<script src="/alerta/dashboard/v2/assets/DataTables/extras/TableTools/media/js/TableTools.min.js"></script>
+<script src="/alerta/dashboard/v2/assets/DataTables/bootstrap/dataTables.bootstrap.js"></script>
+<script src="/alerta/dashboard/v2/assets/bootstrap/js/bootstrap-collapse.js"></script>
+<script src="/alerta/dashboard/v2/assets/bootstrap/js/bootstrap-alert.js"></script>
 
 </body>
 </html>
