add CORS headers to alerta api

--- a/alerta/dashboard/v2/templates/index.html
+++ b/alerta/dashboard/v2/templates/index.html
@@ -286,6 +286,7 @@
 <!-- end container -->
 
 <script>
+    var api_host = "{{ config['api_host'] }}";
     var api_port = {{ config['api_port'] }};
 </script>
 
