fix relative links for about.html

--- a/alerta/dashboard/v2/templates/about.html
+++ b/alerta/dashboard/v2/templates/about.html
@@ -32,9 +32,9 @@
             <a class="brand" href="/alerta/dashboard/v2/templates/index.html">Alert Console</a>
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class=""><a href="/alerta/dashboard/v2/templates/index.html">Production</a></li>
-                    <li class=""><a href="/alerta/dashboard/v2/templates/dev.html">Development</a></li>
-                    <li class=""><a href="/alerta/dashboard/v2/templates/infra.html">Infrastructure</a></li>
+                    <li class=""><a href="index.html">Production</a></li>
+                    <li class=""><a href="dev.html">Development</a></li>
+                    <li class=""><a href="infra.html">Infrastructure</a></li>
                     <li class=""><a href="/Kibana">History</a></li>
                     <li class="active"><a href="about.html">About</a></li>
                 </ul>
