minor relative link fix to about.html

--- a/alerta/dashboard/v2/templates/about.html
+++ b/alerta/dashboard/v2/templates/about.html
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="/alerta/dashboard/v2/templates/index.html">Alert Console</a>
+            <a class="brand" href="index.html">Alert Console</a>
             <div class="nav-collapse">
                 <ul class="nav">
                     <li class=""><a href="index.html">Production</a></li>
