--- a/alerta/dashboard/v2/templates/infra.html
+++ b/alerta/dashboard/v2/templates/infra.html
@@ -180,7 +180,7 @@
             'KPL':           '&tags=datacentre:dc1',
             'BRK':           '&tags=datacentre:dc2',
             'EC2':           '&tags=datacentre:eu-west-1',
-            'NetworkSyslog': '&group=Network|Syslog',
+            'NetworkSyslog': '&group=~Network|Syslog',
             'AlertaGanglia': '&q={"$or":[{"service":"Alerta"},{"group":"Ganglia"}]}',
             'Puppet':        '&group=Puppet',
             'Deploys':       '&group=Deploys',
