web console fixes

--- a/alerta/dashboard/v2/templates/dev.html
+++ b/alerta/dashboard/v2/templates/dev.html
@@ -175,14 +175,14 @@
 
         heartbeatAlerts();
 
-        var env_filter = '&environment=RELEASE|QA|TEST|CODE|DEV|GUDEV|STAGE|LWP';
+        var env_filter = '&environment=~RELEASE|QA|TEST|CODE|DEV|GUDEV|STAGE|LWP';
         var asiFilters = {
-            'R2R1':             '&service=~R2|R1',
-            'FrontendMobile':   '&service=~Frontend|Mobile',
+            'R2R1':             '&service=R2&service=R1',
+            'FrontendMobile':   '&service=Frontend&service=Mobile',
             'ContentAPI':       '&service=ContentAPI',
-            'Shared':           '&service=Shared',
-            'D2MicroApps':      '&service=Discussion|MicroApp',
-            'FlexibleIdentity': '&service=FlexibleContent|Identity',
+            'Shared':           '&service=SharedSvcs',
+            'D2MicroApps':      '&service=Discussion&service=MicroApp',
+            'FlexibleIdentity': '&service=FlexibleContent&service=Identity',
             'Other':            '&service!=~R2|R1|Frontend|Mobile|ContentAPI|Shared|Discussion|MicroApp|FlexibleContent|Identity|Network',
             'Network':          '&service=Network'
         };
