minor fix to console

--- a/alerta/dashboard/v2/templates/index.html
+++ b/alerta/dashboard/v2/templates/index.html
@@ -303,7 +303,7 @@
         var env_filter = '&environment=PROD&environment=INFRA';
         var asiFilters = {
             'R2R1':             '&service=R2&service=R1',
-            'FrontendMobile':   '&service=Frontend&serviceMobile',
+            'FrontendMobile':   '&service=Frontend&service=Mobile',
             'ContentAPI':       '&service=ContentAPI',
             'Shared':           '&service=SharedSvcs',
             'D2MicroApps':      '&service=Discussion&service=MicroApp',
