replace alert-aws with alert-cloudwatch

--- a/alerta/dashboard/v2/templates/origin.html
+++ b/alerta/dashboard/v2/templates/origin.html
@@ -177,7 +177,7 @@
 
         var env_filter = ''; // all environments
         var asiFilters = {
-            'EC2':           '&origin=~alert-aws',
+            'CloudWatch':    '&origin=~alert-cloudwatch',
             'Dynect':        '&origin=~alert-dynect',
             'Ping':          '&origin=~alert-pinger',
             'SNMP':          '&origin=~alert-snmptrap',
