add support for config.js configuration file for alert console

--- a/alerta/dashboard/v2/templates/widgets/details.html
+++ b/alerta/dashboard/v2/templates/widgets/details.html
@@ -116,11 +116,7 @@
 </div>
 <!-- end container -->
 
-<script>
-    var api_host = "{{ config['api_host'] }}";
-    var api_port = {{ config['api_port'] }};
-</script>
-
+<script src="/alerta/dashboard/v2/assets/js/config.js"></script>
 <script src="/alerta/dashboard/v2/assets/js/console.js"></script>
 <script src="/alerta/dashboard/v2/assets/js/purl.js"></script>
 
